<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/home"
        android:id="@+id/homeFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_foreground"/>

    <item
        android:title="@string/favourites"
        android:id="@+id/favouritesFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_fav_foreground"/>

    <item
        android:title="@string/notes"
        android:id="@+id/noteFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_notes_foreground"/>

    <item
        android:title="@string/profile"
        android:id="@+id/profileFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_profile_foreground"/>

    <item
        android:title="@string/about"
        android:id="@+id/aboutFragment2"
        app:showAsAction="always"
        android:icon="@drawable/ic_about_foreground"/>

    <item
        android:title="@string/settings"
        android:id="@+id/settingsFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_foreground"/>

</menu>