<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waifusilhouette"
    tools:context=".ui.activities.LockActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg"
        android:visibility="gone"
        android:layout_width="320dp"
        android:layout_height="270dp"
        android:paddingTop="12dp"
        android:paddingBottom="6dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:background="@drawable/reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="220dp">

        <TextView
            android:id="@+id/sigi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/signin"
            android:paddingTop="4dp"
            android:paddingBottom="5dp"
            android:background="@drawable/sign"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/wheat"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/sigu"
            app:layout_constraintStart_toStartOf="@id/reg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sigu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/reg"
            app:layout_constraintStart_toEndOf="@id/sigi"
            android:paddingTop="4dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/wheat"
            android:textSize="28sp"
            android:text="@string/signup"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/reg"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sigi"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="19dp"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:hint="@string/enter_your_username_here"
            android:textColorHint="@color/white"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="19dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/enter_your_password_here"
            android:textColorHint="@color/white"
            android:autofillHints="name"/>

        <Button
            android:id="@+id/si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="15dp"
            android:theme="@style/button"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            app:layout_constraintStart_toStartOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sig"
        android:layout_width="340dp"
        android:layout_height="440dp"
        android:paddingTop="12dp"
        android:paddingBottom="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="220dp">

        <TextView
            android:id="@+id/sigi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/signin"
            android:paddingTop="4dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/wheat"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/sigu1"
            app:layout_constraintStart_toStartOf="@id/sig"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sigu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/sig"
            app:layout_constraintStart_toEndOf="@id/sigi1"
            android:paddingTop="4dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/sign"
            android:textColor="@color/wheat"
            android:textSize="28sp"
            android:text="@string/signup"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/sig"/>

        <EditText
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sigi1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="19dp"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:hint="@string/enter_your_username_here"
            android:textColorHint="@color/white"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="name"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/enter_your_firsname"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/username1"
            tools:layout_editor_absoluteX="-14dp" />

        <EditText
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="19dp"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:hint="@string/enter_your_lastname"
            android:textColorHint="@color/white"
            android:autofillHints="name"/>


        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/last"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="19dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/enter_your_password_here"
            android:textColorHint="@color/white"
            android:autofillHints="password"/>

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pass1"
            app:layout_constraintBottom_toTopOf="@id/su"
            app:layout_constraintStart_toStartOf="parent"
            android:text="I agree to Janim's "
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/wheat"/>

        <TextView
            android:id="@+id/tc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms and Conditions"
            app:layout_constraintStart_toEndOf="@id/cb"
            app:layout_constraintBottom_toBottomOf="@id/cb"
            app:layout_constraintTop_toTopOf="@id/cb"
            android:textColor="@color/light_blue"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <View
            android:id="@+id/tcw"
            android:layout_width="152dp"
            android:visibility="invisible"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="@id/tc"
            app:layout_constraintStart_toStartOf="@id/tc"
            app:layout_constraintTop_toTopOf="@id/tc"
            app:layout_constraintBottom_toBottomOf="@id/tc"
            android:background="@drawable/warning"/>

        <Button
            android:id="@+id/su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/signup"
            android:theme="@style/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/black">


        <ImageView
            android:id="@+id/fc"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:src="@drawable/face"
            android:layout_marginTop="130dp"
            app:layout_constraintBottom_toTopOf="@id/tct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/fc"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/wheat"
            android:textSize="18sp"
            android:text="Janim is a free app developed by Jay.\nusers of this app just have to be anime fans!\nEasy right? So what are you waiting for?\nLet's get this!!"/>

        <Button
            android:id="@+id/contine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tct"
            app:layout_constraintEnd_toEndOf="@id/tct"
            app:layout_constraintStart_toStartOf="@id/tct"
            android:layout_marginTop="50dp"
            android:theme="@style/button"
            android:text="Continue"
            android:fontFamily="sans-serif-black"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>